--- a/app/src/main/res/layout/my_row2.xml
+++ b/app/src/main/res/layout/my_row2.xml
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/gray">
+            android:background="#3d7894">
 
             <ImageView
                 android:layout_width="3dp"
@@ -93,18 +93,18 @@
                 android:paddingTop="5dp"/>
 
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/accept"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Отменить \n запись"
-                android:textColor="#DF0718"
+                android:textColor="#f55d6f"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.989"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="1"
-                android:id="@+id/accept"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
