--- a/app/src/main/res/layout/activity_registrait.xml
+++ b/app/src/main/res/layout/activity_registrait.xml
@@ -19,10 +19,10 @@
             android:orientation="vertical"
             android:padding="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.495">
 
 
             <TextView
@@ -238,10 +238,10 @@
                     android:paddingTop="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.355"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.02" />
+                    app:layout_constraintVertical_bias="0.0" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -255,16 +255,17 @@
                     android:id="@+id/nomerOMS"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
+
                     android:background="@android:color/transparent"
                     android:hint="@string/nomerOMS"
                     android:inputType="number"
                     android:paddingTop="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.179"
+                    app:layout_constraintHorizontal_bias="0.355"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="0.02" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
