--- a/app/src/main/res/layout/fragment_take_note.xml
+++ b/app/src/main/res/layout/fragment_take_note.xml
@@ -19,17 +19,15 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="500dp">
-
-
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="354dp"
-                android:layout_height="781dp"
+                android:layout_width="349dp"
+                android:layout_height="658dp"
                 android:layout_gravity="center"
-                android:padding="20dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/back"
+                android:background="@drawable/seriy_fon"
                 android:orientation="vertical"
+                android:padding="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -253,8 +251,6 @@
                     android:layout_gravity="center" />
 
 
-
-
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/openCalendar"
                     android:layout_width="wrap_content"
@@ -262,33 +258,44 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:paddingTop="10dp"
-                    app:backgroundTint="#3d7894"
-                    android:text="Выбрать дату записи" />
+                    android:text="Выбрать дату записи"
+                    app:backgroundTint="#3d7894" />
 
 
                 <com.google.android.material.button.MaterialButton
-                    app:backgroundTint="#3d7894"
                     android:id="@+id/registration_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="Записаться"
+                    app:backgroundTint="#3d7894"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="320dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
+    <LinearLayout
+        android:layout_width="349dp"
+        android:layout_height="207dp"
+        android:background="@drawable/seriy_fon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95"/>
+        app:layout_constraintVertical_bias="0.95">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="320dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.95" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
