--- a/app/src/main/res/layout/activity_changes.xml
+++ b/app/src/main/res/layout/activity_changes.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="352dp"
                 android:layout_height="639dp"
-                android:background="@drawable/back"
+                android:background="@drawable/seriy_fon"
                 android:orientation="vertical"
                 android:padding="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
