--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="315dp"
         android:layout_height="312dp"
-        android:background="@drawable/back"
+        android:background="@drawable/seriy_fon"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
