--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="339dp"
         android:layout_height="386dp"
-        android:background="@drawable/back"
+        android:background="@drawable/seriy_fon"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
