--- a/app/src/main/res/layout/activity_registrait.xml
+++ b/app/src/main/res/layout/activity_registrait.xml
@@ -13,9 +13,9 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="347dp"
-            android:layout_height="610dp"
-            android:background="@drawable/back"
+            android:layout_width="349dp"
+            android:layout_height="627dp"
+            android:background="@drawable/seriy_fon"
             android:orientation="vertical"
             android:padding="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -284,7 +284,7 @@
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/linearLayout"
-            app:layout_constraintVertical_bias="1.1" />
+            app:layout_constraintVertical_bias="1.2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
