--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,7 @@
                 android:layout_width="380dp"
                 android:layout_height="705dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/back"
+                android:background="@drawable/seriy_fon"
                 android:gravity="center"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
