--- a/app/src/main/res/layout/fragment_take_note.xml
+++ b/app/src/main/res/layout/fragment_take_note.xml
@@ -43,6 +43,7 @@
 
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:enabled = "false"
                         android:id="@+id/surname"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
@@ -66,6 +67,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/name"
+                        android:enabled = "false"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
@@ -88,6 +90,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/name_of_father"
+                        android:enabled = "false"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
 
@@ -112,6 +115,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/data"
+                        android:enabled = "false"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
 
@@ -137,7 +141,7 @@
                         android:id="@+id/snils"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
-
+                        android:enabled = "false"
                         android:background="@android:color/transparent"
                         android:hint="@string/snils"
                         android:inputType="number"
@@ -160,7 +164,7 @@
                         android:id="@+id/email"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
-
+                        android:enabled = "false"
                         android:background="@android:color/transparent"
                         android:hint="@string/email"
                         android:inputType="textEmailAddress"
@@ -184,7 +188,7 @@
                         android:id="@+id/phone"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
-
+                        android:enabled = "false"
                         android:background="@android:color/transparent"
                         android:hint="@string/phone"
                         android:inputType="number"
@@ -208,6 +212,7 @@
                         android:id="@+id/polis"
                         android:layout_width="290dp"
                         android:layout_height="34dp"
+                        android:enabled = "false"
                         android:background="@android:color/transparent"
                         android:hint="@string/seriaOMS"
                         android:inputType="number"
@@ -231,7 +236,7 @@
                         android:id="@+id/polis_number"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
-
+                        android:enabled = "false"
                         android:background="@android:color/transparent"
                         android:hint="@string/nomerOMS"
                         android:inputType="number"
